--- a/timer-app/package.json
+++ b/timer-app/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^3.0.0",
     "react-scripts": "5.0.0",
+    "socket.io-client": "^4.4.1",
     "typescript": "^4.3.5",
     "web-vitals": "^0.2.2"
   },
@@ -42,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/socket.io-client": "^3.0.0"
   }
 }
