--- a/timer-app/package.json
+++ b/timer-app/package.json
@@ -6,6 +6,7 @@
     "@chakra-ui/react": "^1.8.3",
     "@emotion/react": "^11.0.0",
     "@emotion/styled": "^11.0.0",
+    "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^5.9.0",
     "@testing-library/react": "^10.2.1",
     "@testing-library/user-event": "^12.0.2",
@@ -13,12 +14,16 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.23",
     "framer-motion": "^4.0.0",
     "nanoid": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^3.0.0",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
     "socket.io-client": "^4.4.1",
     "typescript": "^4.3.5",
     "web-vitals": "^0.2.2"
