--- a/timer-app/package.json
+++ b/timer-app/package.json
@@ -50,6 +50,7 @@
     ]
   },
   "devDependencies": {
-    "@types/socket.io-client": "^3.0.0"
+    "@types/socket.io-client": "^3.0.0",
+    "eslint-config-react-app": "^7.0.1"
   }
 }
